# binance-funding

./: .dockerignore  .env.profile.debug  .env.profile.strict  .gitignore  .telegram_notify_cache.json  CLAUDE.md  Dockerfile  README.md  config.demo.yaml  config.yaml  current_rates.py  debug_rates.py  deploy.sh  diagnose_rates.py  docker-compose.yml  docker-entrypoint.sh  env  install.sh  pyproject.toml  requirement_gen.sh  requirements.txt  run.sh
.github/agents/: story-planner.agent.md
.github/workflows/: main.yml
cmd/: main.py  main_from_ai.py  main_old.py
feature/: README.md  next-step-task-split.md  phase-0-mysql-funding-logs.md  phase-1-trading-api-foundation.md  phase-2-dry-run-wiring.md  phase-3-symbol-rules-and-sizing.md  phase-4-entry-exit-risk-controls.md  phase-5-monitoring-and-pnl.md  phase-6-test-and-rollout.md
src/: __init__.py
src/binance/: __init__.py  binance_funding.py  trading_bot.py
src/binance_funding/: __init__.py  analyzer.py  client.py  config.py  main.py  order_manager.py  order_timer.py  price_analyzer.py  strategy.py
src/internal/: basis.py  filter.py  funding.py  mysql_logger.py  spread.py  trading.py  volume.py
src/xgb/: __init__.py  risk_predictor.py
tests/: test_client.py
